# Powerflex_Backend

./: .env  .env.example  .gitignore  README.md  dockerfile  pyproject.toml  requirements-1.txt  requirements.txt
.vscode.example/: settings.json
backend/: settings.py  urls.py
cms/: admin.py  models.py  serializers.py  urls.py  views.py
cms/fixtures/: faq_fixture.json
cms/migrations/: 0001_initial.py  0002_content.py
package/: admin.py  models.py  serializers.py  urls.py  views.py
package/migrations/: 0001_initial.py  0002_package_image.py  0003_package_runtime.py  0004_packageproducts.py  0005_rename_packageproducts_packageproduct.py  0006_alter_packageproduct_package.py  0007_packageorder_packageorderapplication.py  0008_alter_packageorderapplication_applicant_id_card_and_more.py  0009_alter_packageorderapplication_applicant_id_card_and_more.py
product/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
product/backup/: Category.json
product/commands/: seed.py
product/fixtures/: appliance.json  appliance_category.json  band.json  brand.json  category.json  product.json
product/migrations/: 0001_initial.py  0002_appliancecategory_appliance.py  0002_product_cycle_life_product_dod_product_efficiency_and_more.py  (+9 more)
rest-client/: calculate-financing.http  calculate-quote.http  create-quote.http  create-user.http
setting/: admin.py  models.py  signals.py
support/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  components.json  models.py  serializers.py  urls.py  utils.py  views.py
website/: views.py
(+44 files in other folders)
